--- a/azurearchitecturestarterpack/1/module-one/overview.html
+++ b/azurearchitecturestarterpack/1/module-one/overview.html
@@ -12,7 +12,7 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://tremorscript.github.io/tremorsyshome">Tremorsys home</a>
+      <a class="navbar-item" href="https://tremorsys.com">Tremorsys home</a>
       <div class="navbar-item search hide-for-print">
         <div id="search-field" class="field">
           <input id="search-input" type="text" placeholder="Search the docs">
@@ -63,7 +63,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../index.html">Welcome</a>
+    <a class="nav-link" href="../index.html">Azure Architecture Starter Pack</a>
   </li>
 </ul>
   </li>
@@ -92,6 +92,14 @@
       </ul>
     </li>
     <li class="component">
+      <a class="title" href="../../../homesite/1.0.0/index.html">Home page</a>
+      <ul class="versions">
+        <li class="version is-latest">
+          <a href="../../../homesite/1.0.0/index.html">1.0.0</a>
+        </li>
+      </ul>
+    </li>
+    <li class="component">
       <a class="title" href="../../../projectstarterpack/1.0.0/inline-text-formatting.html">New Project Starter Pack</a>
       <ul class="versions">
         <li class="version is-latest">
@@ -115,7 +123,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="../index.html" class="home-link"></a>
+  <a href="../../../homesite/1.0.0/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../index.html">Azure Architecture Starter Pack</a></li>
