--- a/projectstarterpack/1.0.0/index.html
+++ b/projectstarterpack/1.0.0/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="canonical" href="https://tremorscript.github.io/tremorsyshome/projectstarterpack/1.0.0/inline-text-formatting.html">
+<link rel="canonical" href="https://tremorsys.com/projectstarterpack/1.0.0/inline-text-formatting.html">
 <script>location="inline-text-formatting.html"</script>
 <meta http-equiv="refresh" content="0; url=inline-text-formatting.html">
 <meta name="robots" content="noindex">
 <title>Redirect Notice</title>
 <h1>Redirect Notice</h1>
-<p>The page you requested has been relocated to <a href="inline-text-formatting.html">https://tremorscript.github.io/tremorsyshome/projectstarterpack/1.0.0/inline-text-formatting.html</a>.</p>
+<p>The page you requested has been relocated to <a href="inline-text-formatting.html">https://tremorsys.com/projectstarterpack/1.0.0/inline-text-formatting.html</a>.</p>
