--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link rel="canonical" href="https://tremorscript.github.io/tremorsyshome/homesite/1.0.0/index.html">
 <script>location="homesite/1.0.0/index.html"</script>
 <meta http-equiv="refresh" content="0; url=homesite/1.0.0/index.html">
 <meta name="robots" content="noindex">
 <title>Redirect Notice</title>
 <h1>Redirect Notice</h1>
-<p>The page you requested has been relocated to <a href="homesite/1.0.0/index.html">homesite/1.0.0/index.html</a>.</p>
+<p>The page you requested has been relocated to <a href="homesite/1.0.0/index.html">https://tremorscript.github.io/tremorsyshome/homesite/1.0.0/index.html</a>.</p>
