deploy: a2b12f624a69cad5560fb83ad2b0c6d095d273af

--- a/azurearchitecturestarterpack/1/module-one/overview.html
+++ b/azurearchitecturestarterpack/1/module-one/overview.html
@@ -123,7 +123,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="../index.html" class="home-link"></a>
+  <a href="../../../homesite/1.0.0/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../index.html">Azure Architecture Starter Pack</a></li>
