--- a/projectstarterpack/1.0.0/root/lists/ordered-list.html
+++ b/projectstarterpack/1.0.0/root/lists/ordered-list.html
@@ -144,7 +144,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="../../../../azurearchitecturestarterpack/1/index.html" class="home-link"></a>
+  <a href="../../../../homesite/1.0.0/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../../inline-text-formatting.html">New Project Starter Pack</a></li>
