--- a/azurearchitecturestarterpack/1/index.html
+++ b/azurearchitecturestarterpack/1/index.html
@@ -15,7 +15,7 @@
       <a class="navbar-item" href="https://tremorscript.github.io/tremorsyshome">Tremorsys home</a>
       <div class="navbar-item search hide-for-print">
         <div id="search-field" class="field">
-          <input id="search-input" type="text" placeholder="Search the docs" autofocus>
+          <input id="search-input" type="text" placeholder="Search the docs">
         </div>
       </div>
       <button class="navbar-burger" data-target="topbar-nav">
@@ -123,7 +123,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="index.html" class="home-link is-current"></a>
+  <a href="../../homesite/1.0.0/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="index.html">Azure Architecture Starter Pack</a></li>
