--- a/referenceguides/0.1/FSharp/overview.html
+++ b/referenceguides/0.1/FSharp/overview.html
@@ -124,7 +124,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="../../../azurearchitecturestarterpack/1/index.html" class="home-link"></a>
+  <a href="../../../homesite/1.0.0/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../index.html">Reference Guides</a></li>
