--- a/azurearchitecturestarterpack/1/index.html
+++ b/azurearchitecturestarterpack/1/index.html
@@ -12,7 +12,7 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://tremorscript.github.io/tremorsyshome">Tremorsys home</a>
+      <a class="navbar-item" href="https://tremorsys.com">Tremorsys home</a>
       <div class="navbar-item search hide-for-print">
         <div id="search-field" class="field">
           <input id="search-input" type="text" placeholder="Search the docs">
