--- a/referenceguides/0.1/index.html
+++ b/referenceguides/0.1/index.html
@@ -102,6 +102,13 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="Git/overview.html">Git Notes</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </nav>
 </div>
