deploy: d5b2c9181c618c11ab4e8ba5c920261c5d55a40f

--- a/azurearchitecturestarterpack/1/index.html
+++ b/azurearchitecturestarterpack/1/index.html
@@ -87,10 +87,10 @@
       </ul>
     </li>
     <li class="component">
-      <a class="title" href="../../referenceguides/0.1/index.html">Reference Guides</a>
+      <a class="title" href="../../studynotes/0.1/index.html">Study Notes</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="../../referenceguides/0.1/index.html">0.1</a>
+          <a href="../../studynotes/0.1/index.html">0.1</a>
         </li>
       </ul>
     </li>
