--- a/homesite/1.0.0/index.html
+++ b/homesite/1.0.0/index.html
@@ -52,7 +52,7 @@
     <a class="nav-link" href="../../projectstarterpack/1.0.0/inline-text-formatting.html">Project Starter Pack</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../../referenceguides/0.1/index.html">Reference Guides</a>
+    <a class="nav-link" href="../../studynotes/0.1/index.html">Study Notes</a>
   </li>
 </ul>
   </li>
@@ -90,10 +90,10 @@
       </ul>
     </li>
     <li class="component">
-      <a class="title" href="../../referenceguides/0.1/index.html">Reference Guides</a>
+      <a class="title" href="../../studynotes/0.1/index.html">Study Notes</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="../../referenceguides/0.1/index.html">0.1</a>
+          <a href="../../studynotes/0.1/index.html">0.1</a>
         </li>
       </ul>
     </li>
