--- a/studynotes/0.1/FSharp/YieldMethod.html
+++ b/studynotes/0.1/FSharp/YieldMethod.html
@@ -221,9 +221,9 @@ let trace = new TraceBuilder()
 </div>
 </div>
 <div class="paragraph">
-<p>If return and yield are basically the same thing, why are there two different keywords?<br>
+<p>If <strong>return</strong> and <strong>yield</strong> are basically the same thing, why are there two different keywords?<br>
 The answer is mainly so that you can enforce appropriate syntax by implementing one but not the other.<br>
-For example, the seq expression does allow yield but doesn’t allow return, while the async does allow return, but does not allow yield.</p>
+For example, the <strong>seq</strong> expression does allow yield but doesn’t allow return, while the <strong>async</strong> does allow return, but does not allow yield.</p>
 </div>
 </article>
   </div>
