--- a/studynotes/0.1/FSharp/overview.html
+++ b/studynotes/0.1/FSharp/overview.html
@@ -175,10 +175,20 @@
 <h1 class="page">FSharp Notes</h1>
 <div class="paragraph">
 <p>This is my personal study notes for FSharp.
-People from whom I have shamelessly and blatantly copied.
-* <a href="https://fsharpforfunandprofit.com/">Scott Wlaschin</a>
-* <a href="https://www.udemy.com/user/kit-eason/">Kit Eason</a>
-* <a href="https://blog.ploeh.dk/about/">Mark Seemann</a></p>
+People from whom I have shamelessly and blatantly copied.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://fsharpforfunandprofit.com/">Scott Wlaschin</a></p>
+</li>
+<li>
+<p><a href="https://www.udemy.com/user/kit-eason/">Kit Eason</a></p>
+</li>
+<li>
+<p><a href="https://blog.ploeh.dk/about/">Mark Seemann</a></p>
+</li>
+</ul>
 </div>
 </article>
   </div>
