--- a/studynotes/0.1/FSharp/ListWrapperTypes.html
+++ b/studynotes/0.1/FSharp/ListWrapperTypes.html
@@ -109,6 +109,13 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../Devops/devopsfordevelopers.html">Devops for Asp.Net Core developers</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </nav>
 </div>
@@ -176,7 +183,7 @@
 <article class="doc">
 <h1 class="page">List Wrapper Types</h1>
 <div class="sect1">
-<h2 id="_list_workflow"><a class="anchor" href="#_list_workflow"></a><a class="link" href="#_list_workflow">List Workflow</a></h2>
+<h2 id="_list_workflow"><a class="anchor" href="#_list_workflow"></a>List Workflow</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>The bind function “unwraps” the type, and applies the continuation function to the unwrapped value.<br></p>
@@ -233,7 +240,7 @@ Return converts from unwrapped to wrapped. In this case, that just means wrappin
 </div>
 </div>
 <div class="sect1">
-<h2 id="_syntactic_sugar_for_for"><a class="anchor" href="#_syntactic_sugar_for_for"></a><a class="link" href="#_syntactic_sugar_for_for">Syntactic sugar for "for"</a></h2>
+<h2 id="_syntactic_sugar_for_for"><a class="anchor" href="#_syntactic_sugar_for_for"></a>Syntactic sugar for "for"</h2>
 <div class="sectionbody">
 <div class="listingblock">
 <div class="content">
