--- a/studynotes/0.1/Git/overview.html
+++ b/studynotes/0.1/Git/overview.html
@@ -109,6 +109,13 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../Devops/devopsfordevelopers.html">Devops for Asp.Net Core developers</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </nav>
 </div>
@@ -183,7 +190,7 @@ Everything in one page, so that I do not have to search for git related stuff wh
 </div>
 </div>
 <div class="sect1">
-<h2 id="_basics"><a class="anchor" href="#_basics"></a><a class="link" href="#_basics">Basics</a></h2>
+<h2 id="_basics"><a class="anchor" href="#_basics"></a>Basics</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>A git repository is one giant graph.</p>
@@ -205,7 +212,7 @@ Everything in one page, so that I do not have to search for git related stuff wh
 </div>
 </div>
 <div class="sect1">
-<h2 id="_git_log"><a class="anchor" href="#_git_log"></a><a class="link" href="#_git_log">git log</a></h2>
+<h2 id="_git_log"><a class="anchor" href="#_git_log"></a>git log</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>To list all commits in your repository:<br>
@@ -238,7 +245,7 @@ Everything in one page, so that I do not have to search for git related stuff wh
 </div>
 </div>
 <div class="sect1">
-<h2 id="_references"><a class="anchor" href="#_references"></a><a class="link" href="#_references">References</a></h2>
+<h2 id="_references"><a class="anchor" href="#_references"></a>References</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>GitX shows the logs as follows:-</p>
@@ -292,7 +299,7 @@ Only one command affects the tag and i.e <strong>tag</strong></p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_garbage_collection"><a class="anchor" href="#_garbage_collection"></a><a class="link" href="#_garbage_collection">Garbage collection</a></h2>
+<h2 id="_garbage_collection"><a class="anchor" href="#_garbage_collection"></a>Garbage collection</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Imagine this scenario: you write some code and check it in. Then, you realize you forgot to run the tests, so you run them, and they uncover a syntax error.
@@ -324,7 +331,7 @@ You can trigger this process yourself, using <code>git gc</code>.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_references_make_commits_reachable"><a class="anchor" href="#_references_make_commits_reachable"></a><a class="link" href="#_references_make_commits_reachable">References make commits reachable</a></h2>
+<h2 id="_references_make_commits_reachable"><a class="anchor" href="#_references_make_commits_reachable"></a>References make commits reachable</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><strong>References</strong> <code>&#8230;&#8203;</code> whether they are local branches, remote branches, or tags <code>&#8230;&#8203;</code></p>
@@ -338,7 +345,7 @@ You can trigger this process yourself, using <code>git gc</code>.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_branches_as_savepoints"><a class="anchor" href="#_branches_as_savepoints"></a><a class="link" href="#_branches_as_savepoints">Branches as savepoints</a></h2>
+<h2 id="_branches_as_savepoints"><a class="anchor" href="#_branches_as_savepoints"></a>Branches as savepoints</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Because <strong>references make commits reachable</strong>, creating a branch is a way to "nail down" part of the graph that you might want to come back to later.</p>
@@ -352,10 +359,10 @@ You can trigger this process yourself, using <code>git gc</code>.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_git_merge"><a class="anchor" href="#_git_merge"></a><a class="link" href="#_git_merge">git merge</a></h2>
+<h2 id="_git_merge"><a class="anchor" href="#_git_merge"></a>git merge</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_the_scout_pattern"><a class="anchor" href="#_the_scout_pattern"></a><a class="link" href="#_the_scout_pattern">the scout pattern</a></h3>
+<h3 id="_the_scout_pattern"><a class="anchor" href="#_the_scout_pattern"></a>the scout pattern</h3>
 <div class="paragraph">
 <p>Use this pattern if you are unsure or unclear on exactly what <code>git merge</code> does.</p>
 </div>
@@ -365,13 +372,13 @@ You can trigger this process yourself, using <code>git gc</code>.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_the_savepoint_pattern"><a class="anchor" href="#_the_savepoint_pattern"></a><a class="link" href="#_the_savepoint_pattern">the savepoint pattern</a></h3>
+<h3 id="_the_savepoint_pattern"><a class="anchor" href="#_the_savepoint_pattern"></a>the savepoint pattern</h3>
 <div class="paragraph">
 <p>Being lazy and since it very well explained here without any fluff.<br>
 <a href="https://think-like-a-git.net/sections/testing-out-merges/the-scout-pattern.html" class="bare">https://think-like-a-git.net/sections/testing-out-merges/the-scout-pattern.html</a></p>
 </div>
 <div class="sect3">
-<h4 id="_black_belt_merging"><a class="anchor" href="#_black_belt_merging"></a><a class="link" href="#_black_belt_merging">Black belt merging</a></h4>
+<h4 id="_black_belt_merging"><a class="anchor" href="#_black_belt_merging"></a>Black belt merging</h4>
 <div class="paragraph">
 <p>Being lazy and since it very well explained here without any fluff.<br>
 <a href="https://think-like-a-git.net/sections/testing-out-merges/black-belt-merging.html" class="bare">https://think-like-a-git.net/sections/testing-out-merges/black-belt-merging.html</a></p>
@@ -381,13 +388,13 @@ You can trigger this process yourself, using <code>git gc</code>.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_git_rebase"><a class="anchor" href="#_git_rebase"></a><a class="link" href="#_git_rebase">git rebase</a></h2>
+<h2 id="_git_rebase"><a class="anchor" href="#_git_rebase"></a>git rebase</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Before you start using rebase in a shared repository, make sure everyone who works on your project is comfortable working with rebase. You might also consider changing everyone&#8217;s default pull strategy to "rebase" instead of "merge"</p>
 </div>
 <div class="sect2">
-<h3 id="_git_cherry_pick"><a class="anchor" href="#_git_cherry_pick"></a><a class="link" href="#_git_cherry_pick">git cherry-pick</a></h3>
+<h3 id="_git_cherry_pick"><a class="anchor" href="#_git_cherry_pick"></a>git cherry-pick</h3>
 <div class="paragraph">
 <p>Given one or more existing commits, apply the change each one introduces, recording a new commit for each.</p>
 </div>
@@ -427,14 +434,14 @@ Because this introduces the same change with a different parent, Git builds a ne
 </div>
 </div>
 <div class="sect2">
-<h3 id="_using_git_cherry_pick_to_simulate_git_rebase"><a class="anchor" href="#_using_git_cherry_pick_to_simulate_git_rebase"></a><a class="link" href="#_using_git_cherry_pick_to_simulate_git_rebase">Using 'git cherry-pick' to Simulate 'git rebase'</a></h3>
+<h3 id="_using_git_cherry_pick_to_simulate_git_rebase"><a class="anchor" href="#_using_git_cherry_pick_to_simulate_git_rebase"></a>Using 'git cherry-pick' to Simulate 'git rebase'</h3>
 <div class="paragraph">
 <p>Again being lazy and since it is very well explained here.<br>
 <a href="https://think-like-a-git.net/sections/rebase-from-the-ground-up/using-git-cherry-pick-to-simulate-git-rebase.html" class="bare">https://think-like-a-git.net/sections/rebase-from-the-ground-up/using-git-cherry-pick-to-simulate-git-rebase.html</a></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_a_helpful_mnemonic_for_git_rebase_arguments"><a class="anchor" href="#_a_helpful_mnemonic_for_git_rebase_arguments"></a><a class="link" href="#_a_helpful_mnemonic_for_git_rebase_arguments">A Helpful Mnemonic for 'git rebase' Arguments</a></h3>
+<h3 id="_a_helpful_mnemonic_for_git_rebase_arguments"><a class="anchor" href="#_a_helpful_mnemonic_for_git_rebase_arguments"></a>A Helpful Mnemonic for 'git rebase' Arguments</h3>
 <div class="paragraph">
 <p>To summarize the previous section, this:</p>
 </div>
@@ -465,6 +472,40 @@ git branch -d newbar</pre>
 <div class="paragraph">
 <p>So when I use git rebase, I (almost) always give it two arguments: the name of the place I want to start from, and the name of the place I want to end up. Or, to put it another way, I tell rebase the sequence of events I want it to create, from left to right: git rebase first_this then_this</p>
 </div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_how_to_change_git_remote_origin"><a class="anchor" href="#_how_to_change_git_remote_origin"></a>How to change git remote origin</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>There may be a time when you would like to change the origin url of your git repository to point to another url.</p>
+</div>
+<div class="paragraph">
+<p>You can use the following sequence of commands to do that:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-console hljs" data-lang="console">git remote rename origin upstream <i class="conum" data-value="1"></i><b>(1)</b>
+git remote add origin https://github.com/&lt;GitHub_username&gt;/simple-feed-reader/ <i class="conum" data-value="2"></i><b>(2)</b>
+git push -u origin main <i class="conum" data-value="3"></i><b>(3)</b></code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>Rename the existing origin remote to upstream</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="2"></i><b>2</b></td>
+<td>Add a new origin remote pointing to your copy of the repository on GitHub.</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="3"></i><b>3</b></td>
+<td>Publish your local Git repository to the newly created GitHub repository.</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
