--- a/studynotes/0.1/FSharp/ZeroMethod.html
+++ b/studynotes/0.1/FSharp/ZeroMethod.html
@@ -109,6 +109,13 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../Devops/devopsfordevelopers.html">Devops for Asp.Net Core developers</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </nav>
 </div>
