deploy: b4d33e22cd547f7223781cb381e41d2ca7a73364

--- a/studynotes/0.1/Git/overview.html
+++ b/studynotes/0.1/Git/overview.html
@@ -184,8 +184,7 @@
 <div class="sectionbody">
 <div class="paragraph">
 <p>This is my personal short notes from <a href="https://think-like-a-git.net/" class="bare">https://think-like-a-git.net/</a> and various other sources.<br>
-If I learn something new in git, I intend to put them here.<br>
-Everything in one page, so that I do not have to search for git related stuff when I need to remember something.</p>
+If I learn something new in git, I intend to put it here.<br></p>
 </div>
 </div>
 </div>
@@ -196,18 +195,26 @@ Everything in one page, so that I do not have to search for git related stuff wh
 <p>A git repository is one giant graph.</p>
 </div>
 <div class="paragraph">
-<p>At the surface level, a git commit consists of 2 things:-
-- a pointer to the state of your code at some moment in time.
-- zero or more pointers to "parent" commits</p>
+<p>At the surface level, a git commit consists of 2 things:-</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>a pointer to the state of your code at some moment in time.</p>
+</li>
+<li>
+<p>zero or more pointers to "parent" commits</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><strong>A Git commit is a node in a graph</strong>, and each one points to the node that came before them.</p>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="https://think-like-a-git.net/assets/images2/graphs-and-git.png" alt="graphs and git">
 </div>
 <div class="title">Figure 1. Source: think-like-a-git.net, Git commits (simplified view)</div>
-</div>
-<div class="paragraph">
-<p><strong>A Git commit is a node in a graph</strong>, and each one points to the node that came before them.</p>
 </div>
 </div>
 </div>
