deploy: b4d33e22cd547f7223781cb381e41d2ca7a73364

--- a/studynotes/0.1/Git/overview.html
+++ b/studynotes/0.1/Git/overview.html
@@ -267,13 +267,13 @@ If I learn something new in git, I intend to put it here.<br></p>
 <p>The very colourful labels are called <strong>references</strong>.</p>
 </div>
 <div class="paragraph">
-<p><strong>References are pointers to commits</strong></p>
+<p><strong>References are pointers to commits.</strong></p>
 </div>
 <div class="paragraph">
 <p>There are three types of references: <strong>local branch</strong>, <strong>remote branch</strong>, and <strong>tag</strong>.</p>
 </div>
 <div class="paragraph">
-<p>A <strong>local branch reference</strong> consists of a file that contains the 40-byte identifier of the commit that the reference points to.<br>
+<p>A <strong>local branch reference</strong> is a file that contains a 40-byte identifier of the commit that the reference points to.<br>
 This file is created at the project&#8217;s <code>.git/refs/head</code> directory.<br>
 Creating a branch in Git just means writing 40 bytes to disk, which is why <code>git branch foo`</code> is so fast.</p>
 </div>
@@ -289,7 +289,7 @@ Commands that affect remote branch references include <strong>fetch</strong> and
 <p><strong>Tag references</strong> are branch references that never move.<br>
 <strong>Once you&#8217;ve created a tag, it will never change</strong><br>
 This behavior makes them useful for marking specific versions of a software package, or marking exactly what got deployed to a production server on a particular date.<br>
-Only one command affects the tag and i.e <strong>tag</strong></p>
+Only one command affects the tag and i.e <strong>git tag</strong></p>
 </div>
 <div class="paragraph">
 <p>Now look at the display:-</p>
@@ -375,20 +375,20 @@ You can trigger this process yourself, using <code>git gc</code>.</p>
 </div>
 <div class="paragraph">
 <p>Being lazy and since it very well explained here without any fluff.<br>
-<a href="https://think-like-a-git.net/sections/testing-out-merges/the-scout-pattern.html" class="bare">https://think-like-a-git.net/sections/testing-out-merges/the-scout-pattern.html</a></p>
+<a href="https://think-like-a-git.net/sections/testing-out-merges/the-scout-pattern.html" class="bare" target="_blank" rel="noopener">https://think-like-a-git.net/sections/testing-out-merges/the-scout-pattern.html</a></p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_the_savepoint_pattern"><a class="anchor" href="#_the_savepoint_pattern"></a>the savepoint pattern</h3>
 <div class="paragraph">
 <p>Being lazy and since it very well explained here without any fluff.<br>
-<a href="https://think-like-a-git.net/sections/testing-out-merges/the-scout-pattern.html" class="bare">https://think-like-a-git.net/sections/testing-out-merges/the-scout-pattern.html</a></p>
+<a href="https://think-like-a-git.net/sections/testing-out-merges/the-savepoint-pattern.html" class="bare" target="_blank" rel="noopener">https://think-like-a-git.net/sections/testing-out-merges/the-savepoint-pattern.html</a></p>
 </div>
 <div class="sect3">
 <h4 id="_black_belt_merging"><a class="anchor" href="#_black_belt_merging"></a>Black belt merging</h4>
 <div class="paragraph">
 <p>Being lazy and since it very well explained here without any fluff.<br>
-<a href="https://think-like-a-git.net/sections/testing-out-merges/black-belt-merging.html" class="bare">https://think-like-a-git.net/sections/testing-out-merges/black-belt-merging.html</a></p>
+<a href="https://think-like-a-git.net/sections/testing-out-merges/black-belt-merging.html" class="bare" target="_blank" rel="noopener">https://think-like-a-git.net/sections/testing-out-merges/black-belt-merging.html</a></p>
 </div>
 </div>
 </div>
