--- a/studynotes/0.1/Git/overview.html
+++ b/studynotes/0.1/Git/overview.html
@@ -403,13 +403,7 @@ You can trigger this process yourself, using <code>git gc</code>.</p>
 <div class="sect2">
 <h3 id="_git_cherry_pick"><a class="anchor" href="#_git_cherry_pick"></a>git cherry-pick</h3>
 <div class="paragraph">
-<p>Given one or more existing commits, apply the change each one introduces, recording a new commit for each.</p>
-</div>
-<div class="paragraph">
-<p>Git commit&#8217;s ID is a hash of both its contents and its history. So, even if you have two commits that introduce the exact same change, if they point to different parent commits, they&#8217;ll have different IDs.</p>
-</div>
-<div class="paragraph">
-<p>What <code>git cherry-pick</code> does, basically, is take a commit from somewhere else, and "play it back" wherever you are right now. \
+<p>What <code>git cherry-pick</code> does is take a commit from somewhere else, and "play it back" wherever you are right now.<br>
 Because this introduces the same change with a different parent, Git builds a new commit with a different ID.</p>
 </div>
 <div class="imageblock">
