deploy: b4d33e22cd547f7223781cb381e41d2ca7a73364

--- a/studynotes/0.1/Git/overview.html
+++ b/studynotes/0.1/Git/overview.html
@@ -590,10 +590,11 @@ git push -u origin main <i class="conum" data-value="3"></i><b>(3)</b></code></p
 </li>
 </ul>
 </div>
+<div class="exampleblock">
+<div class="title">Example 1. commit message sample</div>
+<div class="content">
 <div class="paragraph">
-<div class="title">commit message sample</div>
-<p>===
-Add code review recipe for Go</p>
+<p>Add code review recipe for Go</p>
 </div>
 <div class="ulist">
 <ul>
@@ -610,8 +611,9 @@ Add code review recipe for Go</p>
 be added in issue #124</p>
 </div>
 <div class="paragraph">
-<p>Closes: #123
-===</p>
+<p>Closes: #123</p>
+</div>
+</div>
 </div>
 <div class="paragraph">
 <p>You can specify which editor you would like to use for commit messages.</p>
@@ -625,10 +627,10 @@ be added in issue #124</p>
 <div class="title">sample contributing.md files</div>
 <ul>
 <li>
-<p><a href="https://github.com/thoughtbot/factory_bot_rails/blob/master/CONTRIBUTING.md">Factory Bot rails</a></p>
+<p><a href="https://github.com/thoughtbot/factory_bot_rails/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener">Factory Bot rails</a></p>
 </li>
 <li>
-<p><a href="https://github.com/puppetlabs/puppet/blob/main/CONTRIBUTING.md">Puppet</a></p>
+<p><a href="https://github.com/puppetlabs/puppet/blob/main/CONTRIBUTING.md" target="_blank" rel="noopener">Puppet</a></p>
 </li>
 </ul>
 </div>
@@ -637,10 +639,8 @@ be added in issue #124</p>
 <div class="sect1">
 <h2 id="_versioning"><a class="anchor" href="#_versioning"></a>Versioning</h2>
 <div class="sectionbody">
-<div class="openblock">
-<div class="title">Version numbers</div>
-<div class="content">
 <div class="paragraph">
+<div class="title">Version numbers</div>
 <p><code>major.minor[.build[.revision]]</code></p>
 </div>
 <div class="paragraph">
@@ -666,12 +666,8 @@ During CD release components are pushed to a component repository such as Nuget,
 </li>
 </ul>
 </div>
-</div>
-</div>
-<div class="openblock">
-<div class="title">Semantic Versioning</div>
-<div class="content">
 <div class="paragraph">
+<div class="title">Semantic Versioning</div>
 <p>Semantic Versioning is a concept of calculating the version number automatically based on a certain source code repository.</p>
 </div>
 <div class="paragraph">
@@ -695,8 +691,6 @@ During CD release components are pushed to a component repository such as Nuget,
 </div>
 <div class="paragraph">
 <p>Run semvar during the CI process to make each build uniquely identifiable.</p>
-</div>
-</div>
 </div>
 </div>
 </div>
